*SVN*

* Add :script option to in_place_editor to support evalScripts (closes #4194) [codyfauser@gmail.com]

* Fix mixed case enumerable methods in the JavaScript Collection Proxy (closes #4314) [codyfauser@gmail.com]

* Undo accidental escaping for mail_to; add regression test. [Nicholas Seckar]

* Added nicer message for assert_redirected_to (closes #4294) [court3nay]

    assert_redirected_to :action => 'other_host', :only_path => false
    
  when it was expecting...
  
    redirected_to :action => 'other_host', :only_path => true, :host => 'other.test.host'
  
  gives the error message...

    response is not a redirection to all of the options supplied (redirection is <{:only_path=>false, :host=>"other.test.host", :action=>"other_host"}>), difference: <{:only_path=>"true", :host=>"other.test.host"}>

* Change url_for to escape the resulting URLs when called from a view. [Nicholas Seckar, coffee2code]

* Added easy support for testing file uploads with fixture_file_upload #4105 [turnip@turnipspatch.com]. Example:

    # Looks in Test::Unit::TestCase.fixture_path + '/files/spongebob.png'
    post :change_avatar, :avatar => fixture_file_upload('/files/spongebob.png', 'image/png')

* Fixed UrlHelper#current_page? to behave even when url-escaped entities are present #3929 [jeremy@planetargon.com]

* Add ability for relative_url_root to be specified via an environment variable RAILS_RELATIVE_URL_ROOT. [isaac@reuben.com, Nicholas Seckar]

* Fixed link_to "somewhere", :post => true to produce valid XHTML by using the parentnode instead of document.body for the instant form #3007 [Bob Silva]

* Added :function option to PrototypeHelper#observe_field/observe_form that allows you to call a function instead of submitting an ajax call as the trigger #4268 [jonathan@daikini.com]

* Make Mime::Type.parse consider q values (if any) [Jamis Buck]

* XML-formatted requests are typecast according to "type" attributes for :xml_simple [Jamis Buck]
